# mine

./: .gitignore  Makefile  Makefile.am  Makefile.in  bootstrap.sh  config.h.in  configure  configure.ac  configure.in  fields.c  fields.h  mine.c  mine.h  mycurses.h  screens.c  screens.h  signals.c  signals.h  timer.c  timer.h
